--- a/caisse.html
+++ b/caisse.html
@@ -4,6 +4,7 @@
     <title>My Bakey _ caisse</title>
     <meta charset="utf-8">
 
+
 </head>
 <body>
 <div style="float: left;">
@@ -23,8 +24,29 @@
 <input type="submit" id="verif" style="display: block; margin : auto; margin-bottom:1em;font-size: 3em; ">
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
 <script>
+    window.onbeforeunload = function (e) {
+// Your logic to prepare for 'Stay on this Page' goes here
+
+        return "Please click 'Stay on this Page' and we will give you candy";
+    };
+</script>
+<script>
+
+    $(window).bind('beforeunload', function(){
+        var text = '{\n' +
+            '  "prenom": "' + localStorage.getItem("prenom") +'",\n' +
+            '  "niveau": "' + localStorage.getItem("niveau") +'"\n' +
+            '  "tentative": "' + localStorage.getItem("tentative") +'"\n' +
+            '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'"\n' +
+            '}';
+        var filename = "config_joueur.json";
+
+        download(filename, text);
+
+    });
+
+
 
     /* $.getJSON('evolution', function(data){
      console.log(data);
@@ -265,7 +287,28 @@
         return array.sort(function() { return Math.random() - .5 });
     }
 
+</script>
+
+//maj
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script>
+
+    //https://ourcodeworld.com/articles/read/189/how-to-create-a-file-and-generate-a-download-with-javascript-in-the-browser-without-a-server
+    function download(filename, text) {
+        var element = document.createElement('a');
+        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+        element.setAttribute('download', filename);
+
+        element.style.display = 'none';
+        document.body.appendChild(element);
+
+        element.click();
+        document.body.removeChild(element);
+    }
+
+
 
 </script>
+
 </body>
 </html>
