--- a/stock.html
+++ b/stock.html
@@ -2,8 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>stock</title>
+    <title>Stock</title>
+    <link rel="stylesheet" type="text/css" href="menu.css" />
+
 </head>
+<body style="    background-image: url('./image/fond_boulangerie.png');
+"><div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Menu</button>
+    <div id="myDropdown" class="dropdown-content">
+        <a href="./index.html">Menu</a>
+        <a href="./caisse.html">Caisse</a>
+        <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
+        <a href="#" id="supprimer_joueur">Supprimer ma partie</a>
+    </div>
+</div>
+<script>/* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown menu if the user clicks outside of it
+window.onclick = function(event) {
+    if (!event.target.matches('.dropbtn')) {
+        var dropdowns = document.getElementsByClassName("dropdown-content");
+        var i;
+        for (i = 0; i < dropdowns.length; i++) {
+            var openDropdown = dropdowns[i];
+            if (openDropdown.classList.contains('show')) {
+                openDropdown.classList.remove('show');
+            }
+        }
+    }
+}</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
     var niveau_joueur = localStorage.getItem('niveau');
@@ -37,20 +68,58 @@ function tostring_item(nom_prod) {
     })
 }
 </script>
-<body>
-<input type="image" src="image/pain.png" style="width: 10em">
-<script>    tostring_item("pain");</script>
-<input type="image" src="image/croissant.jpg" style="width: 10em">
-<script>    tostring_item("croissant");</script>
-<input type="image" src="image/pain_au_chocolat.jpg" style="width: 10em">
-<script>    tostring_item("pain au chocolat");</script>
-<input type="image" src="image/gateau_au_chocolat.webp" style="width: 10em">
-<script>    tostring_item("gateau au chocolat");</script>
-<input type="image" src="image/meringue.png" style="width: 10em">
-<script>    tostring_item("meringue");</script>
-<input type="image" src="image/cookie.png" style="width: 10em">
-<script>    tostring_item("cookie");</script>
-<input type="image" src="image/macaron.jpg" style="width: 10em">
-<script>    tostring_item("macaron");</script>
+
+<table style="background-color: brown; border:solid; border-color: brown; margin: auto; margin-top: 5%;
+
+
+
+">
+    <tr style="background-color:chocolate" >
+        <td><input id="0" alt="pain"  type="image" src="image/pain.png" style="width: 10em; z-index: 2 ">
+            <script>    tostring_item("pain");</script></td>
+        <td><input id="1" alt="croissant" type="image" src="image/croissant.jpg" style="width: 10em">
+            <script>    tostring_item("croissant");</script></td>
+        <td><input id="2" alt="pain au chocolat" type="image" src="image/pain_au_chocolat.png" style="width: 10em">
+            <script>    tostring_item("pain au chocolat");</script></td>
+    </tr>
+    <tr style="background-color:chocolate" >
+        <td><input id="3" alt="gateau au chocolat" type="image" src="image/gateau_au_chocolat.webp" style="width: 10em">
+            <script>    tostring_item("gateau au chocolat");</script></td>
+        <td><input id="4" alt="meringue" type="image" src="image/meringue.png" style="width: 10em">
+            <script>    tostring_item("meringue");</script></td>
+        <td><input id="5" alt="cookie" type="image" src="image/cookie.png" style="width: 10em">
+            <script>    tostring_item("cookie");</script></td>
+    </tr>
+    <tr style="background-color:chocolate;" >
+        <td style="border: solid; border-color: lightgrey">
+            <input id="6" alt="macaron" type="image" src="image/macaron.jpg" style="width: 10em">
+            <script>    tostring_item("macaron");</script></td>
+        <td></td>
+        <td></td>
+
+    </tr>
+</table>
+
+
 </body>
+<script>
+    //infobulle et image grisée
+for (i=0; i<=6; i++){
+    var elmt = document.getElementById(i);
+    //https://forum.alsacreations.com/topic-5-18801-1-resoluRecuperer-lattribut-Alt.html
+    var nom = document.getElementById(i).getAttribute("alt")
+
+    if (i>niveau_joueur){
+
+        elmt.style.filter = "grayscale(100%)";
+        elmt.style.webkitFilter = "grayscale(100%)";
+        document.getElementById(i).title = nom + " : disponible dès le niveau " + i;
+
+    }
+    else{
+        document.getElementById(i).title = nom;
+    }
+}
+
+</script>
 </html>
