--- a/caisse.html
+++ b/caisse.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="dropdown">
-    <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+    <button onclick="myFunction()" class="dropbtn">Menu</button>
     <div id="myDropdown" class="dropdown-content">
         <a href="./index.html">Menu</a>
         <a href="./stock.html">Stock</a>
@@ -150,7 +150,6 @@ window.onclick = function(event) {
                         }
 
                     } else {
-                        console.log(">>>>>>>>>>>>>>>>>5");
                         //console.log(keys);
                         //on sélectionne 3 produits au hasard
                         //1) on créer une liste de taille = nb produits dispos : 1, 2, 3, 4, 5...
@@ -213,7 +212,7 @@ window.onclick = function(event) {
 
                     }
 
-                    message_client += "<br />S'il-vous-plaît."
+                    message_client += "<br />S'il-vous-plaît.<br /> Combien je vous dois?"
 
                     //bulle client
                     const output = document.getElementById("output");
