si le joueur utilise l'aide, bonne_réponse n'incrémente pas

--- a/stock.html
+++ b/stock.html
@@ -10,7 +10,7 @@
 "><div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Menu</button>
     <div id="myDropdown" class="dropdown-content">
-        <a href="./index.html">Menu</a>
+        <a href="./index.html">Menu principal</a>
         <a href="./caisse.html">Caisse</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
         <a href="#" id="supprimer_joueur">Supprimer ma partie</a>
