--- a/caisse.html
+++ b/caisse.html
@@ -12,13 +12,15 @@
 <div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Menu</button>
     <div id="myDropdown" class="dropdown-content">
-        <a href="./index.html">Menu</a>
+        <a href="./index.html">Menu principal</a>
         <a href="./stock.html">Stock</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
         <a href="#" id="supprimer_joueur">Supprimer ma partie</a>
     </div>
 </div>
-<script>/* When the user clicks on the button,
+<script>
+    var cliquer_pour_etre_aide = false;
+    /* When the user clicks on the button,
 toggle between hiding and showing the dropdown content */
 function myFunction() {
     document.getElementById("myDropdown").classList.toggle("show");
@@ -51,8 +53,8 @@ window.onclick = function(event) {
 <div id="calculette" style="background-color: orangered; width: 50%; float: right">
 <span id="calcul" style="  display:none; margin: auto; margin-top: 0.5em; text-align: center; font-family: ComicFighter, Georgia; font-weight:bold;font-size:3em; "></span>
 <input type="text" id="resultat" style="display: block; margin : auto;margin-top: 0.5em; margin-bottom: 0.5em;font-size: 3em; ">
-<input type="submit" id="verif" style="padding:0.5em;margin:1em;margin-top: 0.5em;margin-bottom:0.5em;font-size: 3em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333">
-    <input type="button" id="aide" style="float:right; margin:1em;margin-top: 0.5em;margin-bottom:0.5em;padding:0.5em;font-size: 3em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333" value="Aide" "></div>
+<input type="submit" id="verif" style="padding:0.5em;margin:1em;margin-top: 0.2em;margin-bottom:0.5em;font-size: 2em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 8em;">
+    <input type="button" id="aide" style="float:right; margin:1em;margin-top: 0.2em;margin-bottom:0.5em;padding:0.5em;font-size: 2em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 8em;" value="Aide" "></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
@@ -234,6 +236,10 @@ window.onclick = function(event) {
 
                             alert("C'est le bon résultat, bravo!");
                             bonne_rep_test = parseInt(localStorage.getItem("bonne_reponse")) + 1;
+
+                            if (cliquer_pour_etre_aide == true){
+                                bonne_rep_test = parseInt(localStorage.getItem("bonne_reponse"));
+                            }
                             if (bonne_rep_test == 3) {
                                 //si c'est la 3e bonne réponse, le niveau du joueur augmente
                                 niveau_joueur++;
@@ -335,6 +341,7 @@ document.getElementById("aide").addEventListener("click", function(){
         clic_aide.style.display = "none";
     } else {
         clic_aide.style.display = "block";
+        cliquer_pour_etre_aide = true;
     }}, false);
 
 </script>
