--- a/caisse.html
+++ b/caisse.html
@@ -52,7 +52,7 @@ window.onclick = function(event) {
 <div id="score" style=" margin-bottom: 0.5em;float: right; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 1em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333""></div>
 <div id="calculette" style="background-color: orangered; width: 50%; float: right">
 <span id="calcul" style="  display:none; margin: auto; margin-top: 0.5em; text-align: center; font-family: ComicFighter, Georgia; font-weight:bold;font-size:3em; "></span>
-<input type="text" id="resultat" style="display: block; margin : auto;margin-top: 0.5em; margin-bottom: 0.5em;font-size: 3em; ">
+<input type="text" id="resultat" autocomplete="off" placeholder="Ecris le résultat ici" style="display: block; margin : auto;margin-top: 0.5em; margin-bottom: 0.5em;font-size: 3em; ">
 <input type="submit" id="verif" style="padding:0.5em;margin:1em;margin-top: 0.2em;margin-bottom:0.5em;font-size: 2em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 8em;">
     <input type="button" id="aide" style="float:right; margin:1em;margin-top: 0.2em;margin-bottom:0.5em;padding:0.5em;font-size: 2em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 8em;" value="Aide" "></div>
 
@@ -95,7 +95,7 @@ window.onclick = function(event) {
                             recur_produit = Math.floor(Math.random() * (3 - 1 + 1)) + 1;
 
                             if (i == 0) {
-                                message_client = "Bonjour, <br />J'aimerais " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
+                                message_client = "Bonjour, j'aimerais<br /> " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
                                 message_calcul = recur_produit + "*" + prix_produit;
                                 resultat_calcul = recur_produit * prix_produit;
                             } else {
@@ -138,7 +138,7 @@ window.onclick = function(event) {
                             recur_produit = Math.floor(Math.random() * (10 - 1 + 1)) + 1;
 
                             if (i == 0) {
-                                message_client = "Bonjour, <br />j'aimerais " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
+                                message_client = "Bonjour, j'aimerais<br /> " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
                                 message_calcul = recur_produit + "*" + prix_produit;
                                 resultat_calcul = recur_produit * prix_produit;
                             } else {
@@ -199,7 +199,7 @@ window.onclick = function(event) {
                             console.log(nom_produit + " " + prix_produit);
 
                             if (i == 0) {
-                                message_client = "Bonjour, <br />j'aimerais " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
+                                message_client = "Bonjour, j'aimerais<br /> " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
                                 message_calcul = recur_produit + "*" + prix_produit;
                                 resultat_calcul = recur_produit * prix_produit;
                             } else {
