--- a/caisse.html
+++ b/caisse.html
@@ -49,7 +49,7 @@ window.onclick = function(event) {
     <img src="./image/caisse.PNG" style="width: 15em">
     <img src="./image/chat.png" style="width: 10em">
 </div>
-<div id="score" style=" margin-bottom: 0.5em;float: right; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 1em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333""></div>
+<div id="score" style=" margin-bottom: 0.5em;float: right; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 1em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333""></>
 <div id="calculette" style="background-color: orangered; width: 50%; float: right">
 <span id="calcul" style="  display:none; margin: auto; margin-top: 0.5em; text-align: center; font-family: ComicFighter, Georgia; font-weight:bold;font-size:3em; "></span>
 <input type="text" id="resultat" autocomplete="off" placeholder="Ecris le résultat ici" style="display: block; margin : auto;margin-top: 0.5em; margin-bottom: 0.5em;font-size: 3em; ">
@@ -214,7 +214,7 @@ window.onclick = function(event) {
 
                     }
 
-                    message_client += "<br />S'il-vous-plaît.<br /> Combien je vous dois?"
+                    message_client += "<br />s'il-vous-plaît.<br /> Combien je vous dois?"
 
                     //bulle client
                     const output = document.getElementById("output");
