--- a/debut_jeu.html
+++ b/debut_jeu.html
@@ -9,7 +9,7 @@
     <meta name="description" content="TD2">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
 </head>
-<body>
+<body style="color: #333333">
 
 <div id="bulle" style="position: relative;
     right:50px;
