--- a/stock.html
+++ b/stock.html
@@ -7,7 +7,7 @@
 
 </head>
 <body style="    background-image: url('./image/fond_boulangerie.png');
-"><div class="dropdown" style="float: left">
+"><div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Menu</button>
     <div id="myDropdown" class="dropdown-content">
         <a href="./index.html">Menu principal</a>
@@ -70,7 +70,7 @@ function tostring_item(nom_prod) {
 </script>
 
 <div id="produits" style="float: left; margin-top: 10%">
-<table style="position:relative; background-color: brown; border:solid; border-color: brown; left: 7em">
+<table style="position:relative; background-color: brown; border:solid; border-color: brown; left: 15em">
     <tr style="background-color:chocolate" >
         <td><input id="0" alt="pain"  type="image" src="image/pain.png" style="width: 10em; ">
             <script>    tostring_item("pain");</script></td>
