--- a/caisse.html
+++ b/caisse.html
@@ -8,7 +8,7 @@
 
 
 </head>
-<body>
+<body style="color: #333333">
 <div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Menu</button>
     <div id="myDropdown" class="dropdown-content">
@@ -49,7 +49,7 @@ window.onclick = function(event) {
     <img src="./image/caisse.PNG" style="width: 15em">
     <img src="./image/chat.png" style="width: 10em">
 </div>
-<div id="score" style=" margin-bottom: 0.5em;float: right; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 1em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333""></>
+<div id="score" style=" margin-bottom: 0.5em;float: right; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 1em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333""></div>
 <div id="calculette" style="background-color: orangered; width: 50%; float: right">
 <span id="calcul" style="  display:none; margin: auto; margin-top: 0.5em; text-align: center; font-family: ComicFighter, Georgia; font-weight:bold;font-size:3em; "></span>
 <input type="text" id="resultat" autocomplete="off" placeholder="Ecris le résultat ici" style="display: block; margin : auto;margin-top: 0.5em; margin-bottom: 0.5em;font-size: 3em; ">
