modif image sans fond

--- a/caisse.html
+++ b/caisse.html
@@ -46,7 +46,7 @@ window.onclick = function(event) {
         <span id="arrow_inner" style="width: 0;height: 0;line-height: 0;border-bottom:30px solid transparent;border-right:30px solid transparent;border-left:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-25px;left:67px;"><span>
     </div>
     <img src="./image/chien.PNG" style="width: 10em; margin-left: 1em;">
-    <img src="./image/caisse.PNG" style="width: 15em">
+    <img src="./image/caisse.png" style="width: 15em">
     <img src="./image/chat.png" style="width: 10em">
 </div>
 <div id="score" style=" margin-bottom: 0.5em;float: right; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 1em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333""></div>
