retour à l'index pour maj
si on ajoute ou retire fichier json,

--- a/init2.html
+++ b/init2.html
@@ -11,11 +11,19 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
 </head>
 <body>
-<div style="display: block; margin : auto;margin-top:1em;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">MY BAKERY</div>
+<input type="button" value="MENU PRINCIPAL" id="menupcp" style="color:#333333;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">
+<div style="display: block; margin : auto;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">MY BAKERY</div>
 <div id="body_bky">
     <a href="debut_jeu.html" style="display: block; width : 20em; margin : auto;margin-bottom: 1em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">LANCER MA PARTIE</a>
     <a href="creerPartie.html" style="display: block; width : 20em; margin : auto;margin-bottom: 1em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">CREER UNE NOUVELLE PARTIE</a>
 
 </div>
+<script>
+    document.getElementById("menupcp").addEventListener("click", function(){
+        location = "index.html";
+
+    }, false);
+</script>
 </body>
+
 </html>
